--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 </head>
  
 <body>
-  We are using node <script>document.write(process.versions.node)</script>,
-  Chrome <script>document.write(process.versions.chrome)</script>,
-  and Electron <script>document.write(process.versions.electron)</script>.
+  <div id="sample">
+    <p>{{message}}</p>
+  </div>
 </body>
 </html>
