接続ボタンまで出すようにした

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Hello World!</title>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
- 
+
 <body>
-  <div id="sample">
-    <p>{{message}}</p>
-  </div>
+<div id="main">
+    <main-tag></main-tag>
+</div>
 </body>
 </html>
