ウィンドウを正しく表示できるようにした

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>CERES PROXY</title>
 </head>
 
 <body>
